--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "guess-city-game-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bernadetteestacio.site/projects/Guess-City-Game",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
